master/force-app/main/default/objects/Therapy_Cycle__c/Therapy_Cycle__c.object-meta.xml
<CustomObject>
    <label>Therapy Cycle</label>
    <nameField>
        <label>Therapy Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Therapy Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>