master/force-app/main/default/objects/Therapy_Cycle__c/fields/Insert_Point_Therapy_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Insert_Point_Therapy_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insert Point Therapy Milestone</label>
    <referenceTo>Therapy_Milestone__c</referenceTo>
    <relationshipLabel>Therapy Cycles</relationshipLabel>
    <relationshipName>Therapy_Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>