master/force-app/main/default/objects/Therapy_Cycle__c/fields/Key_Milestone_Event__c.field-meta.xml
<CustomField>
    <fullName>Key_Milestone_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Milestone Event</label>
    <referenceTo>Therapy_Milestone__c</referenceTo>
    <relationshipLabel>Therapy Cycles (Key Milestone Event)</relationshipLabel>
    <relationshipName>Therapy_Cycles1</relationshipName>
    <type>Lookup</type>
</CustomField>