master/force-app/main/default/objects/Therapy_Cycle__c/fields/Preceding_Therapy_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Preceding_Therapy_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preceding Therapy Cycle</label>
    <referenceTo>Therapy_Cycle__c</referenceTo>
    <relationshipLabel>Therapy Cycles</relationshipLabel>
    <relationshipName>Therapy_Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>