master/force-app/main/default/objects/Therapy_Cycle__c/fields/Therapy_Definition__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Therapy Definition</label>
    <referenceTo>Therapy_Definition__c</referenceTo>
    <relationshipLabel>Therapy Cycles</relationshipLabel>
    <relationshipName>Therapy_Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>