master/force-app/main/default/objects/Therapy_Cycle__c/fields/Therapy_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Therapy Milestone</label>
    <referenceTo>Therapy_Milestone__c</referenceTo>
    <relationshipLabel>Therapy Cycles (Therapy Milestone)</relationshipLabel>
    <relationshipName>Therapy_Cycles2</relationshipName>
    <type>Lookup</type>
</CustomField>